crates/wit2cli/tests/snapshots/snapshots__needs_import.snap
---
source: crates/wit2cli/tests/snapshots.rs
expression: rendered
---
=== WIT surface ===
surface (1 item)
└─ func forward
   params:
     s: string
   results:
     string

=== Generated CLI ===
$ <program> --help
Dynamically dispatch to a library-style component.

Usage: <program> <COMMAND>

Commands:
  forward  
  help     Print this message or the help of the given subcommand(s)

Options:
  -h, --help  Print help

$ <program> forward --help
Usage: forward <s>

Arguments:
  <s>  parameter `s`

Options:
  -h, --help  Print help
