crates/wit2cli/tests/snapshots/snapshots__resources_are_rejected.snap
---
source: crates/wit2cli/tests/snapshots.rs
expression: "format!(\"rejected: resource `{name}`\")"
---
rejected: resource `<anonymous>`
