crates/wit2cli/tests/snapshots/snapshots__wordmark.snap
---
source: crates/wit2cli/tests/snapshots.rs
expression: rendered
---
=== WIT surface ===
surface (1 item)
└─ func to-word
   params:
     markdown: string
   results:
     result<list<u8>, string>

=== Generated CLI ===
$ <program> --help
Dynamically dispatch to a library-style component.

Usage: <program> <COMMAND>

Commands:
  to-word  
  help     Print this message or the help of the given subcommand(s)

Options:
  -h, --help  Print help

$ <program> to-word --help
Usage: to-word <markdown>

Arguments:
  <markdown>  parameter `markdown`

Options:
  -h, --help  Print help
